fixes social icons alignment

--- a/wip/styles/main.less
+++ b/wip/styles/main.less
@@ -230,7 +230,7 @@
   margin-top: 1rem;
   li{
     display: inline-block;
-    margin: 0 2px 12px;
+    margin: 6px 2px;
   }
 }
 
@@ -244,7 +244,7 @@
 }
 
 .whatsapp-share-button{
-  display: inline-block;
+  display: block;
   border-radius: 4px;
   background: #43C553;
   color: #fff;
